--- a/exhaust_fan_control.yaml
+++ b/exhaust_fan_control.yaml
@@ -31,14 +31,12 @@ trigger:
     entity_id: !input exhaust_fan
     to: "on"
 
+variables:
+  automation_lock: !input automation_lock
+
 condition:
-  - condition: or
-    conditions:
-      - condition: template
-        value_template: "{{ not automation_lock }}"
-      - condition: state
-        entity_id: !input automation_lock
-        state: "off"
+  - condition: template
+    value_template: "{{ not automation_lock or is_state(automation_lock, 'off') }}"
 
 action:
   - delay:
