--- a/exhaust_fan_control.yaml
+++ b/exhaust_fan_control.yaml
@@ -25,16 +25,16 @@ blueprint:
       selector:
         entity:
           domain: input_boolean
-trigger:
-  - platform: state
+triggers:
+  - trigger: state
     entity_id: !input exhaust_fan
     to: "on"
 variables:
   automation_lock: !input automation_lock
-condition:
+conditions:
   - condition: template
     value_template: "{{ not automation_lock or is_state(automation_lock, 'off') }}"
-action:
+actions:
   - delay:
       seconds: !input delay_time
   - service: switch.turn_off
